--- a/src/Editor.css
+++ b/src/Editor.css
@@ -1,11 +1,10 @@
 #editor{
-    width: 33vw;
-    min-height: 25vh;
+    width: var(--editor-width);
+    min-height: var(--editor-height);
     height:25vh;
     overflow-y:scroll;
     padding: 5px 10px;
     outline: none;
     resize: vertical;
-    box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.7);
-
+    box-shadow: var(--box-shadow);
 }
