--- a/src/Toolbar.css
+++ b/src/Toolbar.css
@@ -1,6 +1,3 @@
-:root{
-    --toolbar-gradient:linear-gradient(lightblue , lightblue 80%, skyblue);
-}
 
 .toolBar{
     display: flex;
@@ -10,13 +7,13 @@
     gap:0 5px;
     background: var(--toolbar-gradient);
     border: 1px solid black;
-    border-radius: 3px;
-    width: 33vw;
+    border-radius: var(--radius);
+    width: inherit;
     font-weight: bold;
     height: 35px;
     padding:10px;
     margin-bottom: 0;
-    box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.7);
+    box-shadow: var(--box-shadow);
 
     
 }
