--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+*, ::before, ::after{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root{
+  --box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.7);
+  --toolbar-gradient:linear-gradient(lightblue , lightblue 80%, skyblue);
+  --radius:3px;
+  --editor-width:33vw;
+  --editor-height:25vh;
+  --preview-width:50vw;
+  --preview-height:50vh;
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
